--- a/themes/growth-sketch/assets/scss/pages/_home.scss
+++ b/themes/growth-sketch/assets/scss/pages/_home.scss
@@ -222,77 +222,73 @@
     position: relative;
     z-index: 2;
   }
-
-  .evolution-section {
-    h2 {
-      font-size: 2.5rem;
-      font-weight: 700;
-      margin-bottom: 20px;
-      border-bottom: 5px solid black;
-      padding-bottom: 5px;
+  h2 {
+    font-size: 2.5rem;
+    font-weight: 700;
+    margin-bottom: 20px;
+    padding-bottom: 5px;
+    position: relative;
+    &::after{
+      position: absolute;
+      content: "";
+      border-bottom: 3px solid black;
+      width: 50%;
+      bottom: 0;
+      left: 0;
+      transition: width 1000ms ease-in-out;
     }
-
-    p {
-      font-size: 1.1rem;
-      line-height: 1.6;
-      margin-bottom: 20px;
-    }
-
-    .btn {
-      font-size: 1rem;
-      padding: 10px 20px;
-    }
-  }
-
-  .vision-mission-section {
-    h2 {
-      font-size: 2.5rem;
-      font-weight: 700;
-      margin-bottom: 20px;
-    }
-
-    p {
-      font-size: 1.1rem;
-      font-weight: 500;
-      font-style: italic;
-      margin-bottom: 10px;
-    }
-
-    ul {
-      list-style: none;
-      font-size: 1rem;
-      font-weight: 500;
-
-      li {
-        margin-bottom: 10px;
-
-        &::before {
-          content: "•";
-          // color: white;
-          margin-right: 10px;
-        }
+    &:hover{
+      cursor: pointer;
+      &::after{
+        width: 100%;
       }
     }
   }
+  p {
+    font-size: 1.1rem;
+    font-weight: 500;
+    font-style: italic;
+    margin-bottom: 10px;
+  }
+
+  ul {
+    list-style: none;
+    font-size: 1rem;
+    font-weight: 500;
+
+    li {
+      margin-bottom: 10px;
+
+      &::before {
+        content: "•";
+        // color: white;
+        margin-right: 10px;
+      }
+    }
+  }
+  // .evolution-section {
+   
+
+
+  // }
+
+  // .vision-mission-section {
+
+   
+  // }
 
   .vertical-divider {
     width: 2px;
     height: 100%;
-    background-color: rgba(255, 255, 255, 0.6);
+    background-color: rgba(16, 16, 16, 0.918);
     margin: auto;
   }
 }
 
 // why choose us
 
-// Neumorphic style variables
-$light-clr: #F4F4F9;
-$white: #ffffff;
-$card-shadow-light: #dcdce0;
-$card-shadow-dark: #cfcfd4;
-
 .why-choose-us {
-  background-color: $light-clr;
+  background-color: $white;
 
   .section-title {
     font-size: 2.5rem;
@@ -300,9 +296,20 @@ $card-shadow-dark: #cfcfd4;
   }
 
   .neumorphic-card {
-    padding: 2rem;
+    padding: 1rem;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
     height: 100%;
+    // background: linear-gradient(145deg, #ffffff, #e6e6e6);
+    border-radius: 10px;
+    background-color: $white;
+    box-shadow:  20px 20px 60px $white,
+                 -20px -20px 60px #e5e5e5;
+    img{
+      height: 350px;
+      // aspect-ratio: 1;
+      // width: 350px;
+      object-fit: contain;
+    }
 
     h4 {
       font-size: 1.75rem;
