--- a/themes/growth-sketch/layouts/_default/home.html
+++ b/themes/growth-sketch/layouts/_default/home.html
@@ -141,11 +141,11 @@
 
         </div>
         <div class="col-md-6 order-first">
-          <img src="/images/business-icon.png" alt="Business Icon" class="industry-icon">
+          <img src="/images/business-icon.png" alt="Business Icon" class="industry-icon neumorphism">
         </div>
       </div>
     </div>
-    
+
   </div>
 
   <!-- Non-Profit Organizations -->
@@ -153,7 +153,7 @@
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md-6 order-first">
-          <img src="/images/nonprofit-icon.png" alt="Non-Profit Icon" class="industry-icon">
+          <img src="/images/nonprofit-icon.png" alt="Non-Profit Icon" class="industry-icon neumorphism">
         </div>
         <div class="col-md-6">
           <h3 class="industry-title mt-3 mt-md-0">ESP Non-Profit</h3>
@@ -162,7 +162,7 @@
           <p><em>Our learning solutions are different, unique & transformative for non profits.</em> <br><br> Their
             service dream to beneficiaries is the epitome in our solutions. Their cause & crusade, high degree of
             resilience, constant challenging learning needs, endless passion to seek help, develop immunity in rejection
-            environs, constantly networking for volunteers to support social cause etc,
+            environs, constantly networking for volunteers to support social cause etc, are configured as prime important in our learning solutions
           </p>
           <div class="d-flex gap-3 align-items-center">
             <a href="/clientele-beneficiaries/ngo" class="btn btn-secondary">Know more</a>
@@ -180,15 +180,17 @@
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md-6 order-first">
-          <img src="/images/education-icon.png" alt="Education Icon" class="industry-icon">
+          <img src="/images/education-icon.png" alt="Education Icon" class="industry-icon neumorphism">
         </div>
         <div class="col-md-6 order-md-1">
           <h3 class="industry-title mt-3 mt-md-0">ESP Education</h3>
           <hr>
           <h4>Learning Solutions</h4>
-          <p><em>We empower educators and students to innovate & collaborate, fostering growth-oriented learnings in the
-              journey towards academic excellence.</em> <br><br> Thus, ESPeople develop the next generation of youth for
-            tomorrow's nation.</p>
+          <p><em>We empower educators and students to innovate & collaborate, fostering growth-oriented learnings in the journey towards academic excellence.</em></p>
+          <p>
+            Beneficiaries are students, faculty & academic leaders in schools, polytechnics, colleges & universities.
+          </p>
+          <p>Thus, ESPeople develop the next generation of youth for tomorrow's nation.</p>
           <div class="d-flex gap-3 align-items-center">
             <a href="/clientele-beneficiaries/education" class="btn btn-secondary">Know more</a>
             <a href="" class="btn btn-secondary-outline">Video</a>
@@ -204,14 +206,17 @@
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md-6 order-first">
-          <img src="/images/government-icon.png" alt="Government Icon" class="industry-icon">
+          <img src="/images/government-icon.png" alt="Government Icon" class="industry-icon neumorphism">
         </div>
         <div class="col-md-6 order-md-2">
           <h3 class="industry-title mt-3 mt-md-0">ESP Government</h3>
           <hr>
           <h4>Learning Solutions</h4>
-          <p>We align & train government teams to work towards efficient, transparent, good governance for impactful
-            public service in the process of nation building</p>
+          <!-- <p>We align & train government teams to work towards efficient, transparent, good governance for impactful
+            public service in the process of nation building</p> -->
+          <p>Besides we can join hands with the governance team to successfully create awareness, alignment with various
+            stack holders and public in connection with various programs & projects government sets as a priority goals
+            for nations growth & development</p>
           <div class="d-flex gap-3 align-items-center">
             <a href="/clientele-beneficiaries/government-organizations" class="btn btn-secondary">Know more</a>
             <a href="" class="btn btn-secondary-outline">Video</a>
@@ -219,7 +224,7 @@
         </div>
       </div>
     </div>
-    
+
   </div>
 </section>
 
@@ -239,18 +244,18 @@
         </p>
         <!-- <a href="#about-us" class="btn btn-dark mt-4">About us</a> -->
       </div>
-    </div>
+    <!-- </div> -->
     <!-- Divider -->
-    <!-- <div class="row mx-auto"> -->
-    <!-- <div class="col-md-1 d-none d-md-block">
+    <!-- <div class="row "> -->
+    <div class="col-md-2 mx-auto d-none d-md-block">
           <div class="vertical-divider"></div>
-        </div> -->
+        </div>
     <!-- </div> -->
 
-    <div class="row mt-4 mt-md-0">
+    <!-- <div class="row mt-4 mt-md-0"> -->
       <!-- Vision & Mission Section -->
       <div class="col-md-5 ms-auto vision-mission-section" data-aos="fade-left">
-        <h2 class="vision-mission-title">ESP Vision & Mission</h2>
+        <h2 class="evolution-title">ESP Vision & Mission</h2>
         <p class="vision">
           <strong>Energize & Synergize People</strong> capabilities through effective learning interventions
         </p>
@@ -263,7 +268,7 @@
           <li>Towards attaining organizational goals achievement</li>
         </ul>
       </div>
-    </div>
+    <!-- </div> -->
   </div>
   </div>
 </section>
@@ -277,7 +282,7 @@
     <div class="row justify-content-center">
       <!-- Card 1: Our core belief -->
       <div class="col-lg-4 col-md-6 mb-4">
-        <div class="neumorphism neumorphic-card">
+        <div class="neumorphic-card">
           <img src="/images/tyndal-effect.jpeg" alt="Philosophy img">
           <h4 class="mt-3">Our Core Belief</h4>
           <p class="mt-3">Love people for who they are instead of judging them for what they are not....<br> <br>Essence
@@ -288,7 +293,7 @@
 
       <!-- Card 2: ESP Learning Model -->
       <div class="col-lg-4 col-md-6 mb-4">
-        <div class="neumorphism neumorphic-card">
+        <div class="neumorphic-card">
           <img src="/images/learning-model.png" alt="learning model">
           <h4 class="mt-3">The ESP Learning Model</h4>
           <ul>
@@ -307,7 +312,7 @@
       </div>
       <!-- card 3: What we deliver -->
       <div class="col-lg-4 col-md-6 mb-4">
-        <div class=" neumorphism neumorphic-card">
+        <div class=" neumorphic-card">
           <img src="/images/what-we-deliver.png" alt="what we deliver">
           <h4 class="mt-3">What we deliver</h4>
           <p class="text-center text-md-start"><strong>We simply ENERGIZE your people capabilities & then SYNERGIZE them
@@ -319,7 +324,7 @@
 
       <!-- Card 3: Adapting to Change -->
       <div class="col-lg-4 col-md-6 mb-4 d-none">
-        <div class="neumorphism neumorphic-card">
+        <div class="neumorphic-card">
           <img src="/images/video-call-training-2.png" alt="video-call-training-1 img">
           <h4 class="mt-3">Adapting to Change</h4>
           <p>We've adapted to the modern needs of businesses by offering virtual training. Now, you can access our
