--- a/themes/growth-sketch/layouts/partials/footer.html
+++ b/themes/growth-sketch/layouts/partials/footer.html
@@ -1,4 +1,4 @@
-<footer class="text-center text-lg-start">
+<!-- <footer class="text-center text-lg-start">
     <div class="container p-4">
       <section class="mb-4">
         <p>Phone: +91-9962006364 | Email: link2rmd@gmail.com</p>
@@ -11,4 +11,45 @@
       </section>
     </div>
   </footer>
-  
+   -->
+
+   <footer class="footer">
+    <div class="container text-center">
+        <div class="footer-logo">
+            <img src="/images/logo.png" alt="ESPeople Logo" class="logo-img">
+        </div>
+        <ul class="nav justify-content-center">
+            <li class="nav-item">
+                <a class="nav-link" href="#">About</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Blog</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Clientele</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Other L&D</a>
+            </li>
+            <!-- our training programs -->
+             <li class="nav-item">
+              <a class="nav-link" href="#">Training Programs</a>
+             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Contact us</a>
+            </li>
+        </ul>
+
+        <div class="social-icons mt-3">
+            <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
+            <a href="#" class="social-link"><i class="fab fa-facebook"></i></a>
+            <a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
+            <!-- linkedin -->
+             <a href="#" class="social-link"><i class="fab fa-linkedin"></i></a>
+        </div>
+
+        <p class="footer-copyright">
+            © 2024 ESPeople. All rights reserved. Sketched with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://www.tensketch.com/" title="TenSketch website">TenSketch</a>
+        </p>
+    </div>
+</footer>
