benef new layout

--- a/themes/growth-sketch/layouts/_default/home.html
+++ b/themes/growth-sketch/layouts/_default/home.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 <!-- Section 1- Hero -->
-<section class="hero d-flex align-items-center py-8 py-md-5 px-4 px-md-0">
+<section class="hero d-flex align-items-center py-8 px-4 px-md-0">
   <div class="container text-center text-md-start">
     <div class="row align-items-center justify-content-between">
       <div class="col-md-5 mt-5 mt-md-0">
@@ -55,66 +55,60 @@
   </div>
 </section>
 
+<hr class="text-center section-divider mx-auto">
 
 <!-- section 2 - for whom we deliver -->
-<section class="beneficiaries py-8 py-md-5 px-4 px-md-0">
+<section class="beneficiaries py-8 px-4 px-md-0">
   <div class="container">
-    <div class="row align-items-center">
+    <div class="row align-items-center justify-content-between">
       <!-- Left Section (Text) -->
 
-      <div class="col-md-5">
+      <div class="col-md-4">
         <div class="d-flex gap-3 align-items-center mb-3 justify-content-center justify-content-md-start">
-          <img class="icon " src="/images/clientele.jpeg" alt="clientele img">
+          <img class="icon rounded-2" src="/images/clientele.jpeg" alt="clientele img">
           <h4>Our Beneficiaries</h4>
         </div>
         <div class="text-box p-4  rounded-3 mt-4 ">
-          <h3 class="title">Whom we empower with ESP learning solutions?</h3>
+          <h3 class="title">Whom we empower with our ESP learning solutions?</h3>
         </div>
       </div>
 
       <!-- Right Section (Cards) -->
-      <div class="col-md-7 mt-4 mt-md-0">
-        <div class="row g-3">
-          <div class="col-md-6">
-            <div class="beneficiary-card d-flex flex-column py-4">
+      <div class="col-md-6 mt-4 mt-md-0">
+        <div class="grid-container d-md-grid row gap-4 gap-md-2">
+          <div class="grid-item item1">
+            <div class="beneficiary-card py-4">
               <i class="fa-solid fa-business-time"></i>
-              <!-- <img src="/images/Business-Organization.png" alt="Business-Organization img"> -->
-              <!-- <img src="/images/ESP-Business.png" alt="ESP Business"> -->
-              <h4 class="mt-auto">ESP Business</h4>
+              <h4 class="mt-2">ESP Business</h4>
             </div>
           </div>
-          <div class="col-md-6">
-            <div class="beneficiary-card d-flex flex-column py-4">
+          <div class="grid-item item2">
+            <div class="beneficiary-card py-4">
               <i class="fa-solid fa-building-ngo"></i>
-              <!-- <img src="/images/Non-Profit-Organizations.png" alt="Non-Profit-Organizations img"> -->
-              <!-- <img src="/images/ESP-NonProfit.png" alt="ESP Non-Profit"> -->
-              <h4 class="mt-auto">ESP Non-Profit</h4>
+              <h4 class="mt-2">ESP Non-Profit</h4>
             </div>
           </div>
-          <div class="col-md-6">
-            <div class="beneficiary-card d-flex flex-column py-4">
+          <div class="grid-item item3">
+            <div class="beneficiary-card py-4">
               <i class="fa-solid fa-user-graduate"></i>
-              <!-- <img src="/images/Educational-Institutions.png" alt="Educational-Institutions img"> -->
-              <!-- <img src="/images/ESP-Education.png" alt="ESP Education"> -->
-              <h4 class="mt-auto">ESP Education</h4>
+              <h4 class="mt-2">ESP Education</h4>
             </div>
           </div>
-          <div class="col-md-6">
-            <div class="beneficiary-card d-flex flex-column py-4">
+          <div class="grid-item item4">
+            <div class="beneficiary-card py-4">
               <i class="fa-solid fa-landmark"></i>
-              <!-- <img src="/images/Government-Organizations.png" alt="Government-Organizations img"> -->
-              <!-- <img src="/images/ESP-Government.png" alt="ESP Government"> -->
-              <h4 class="mt-auto">ESP Government</h4>
+              <h4 class="mt-2">ESP Government</h4>
             </div>
           </div>
         </div>
+        
       </div>
     </div>
   </div>
 </section>
 
 <!-- sec 3 - clientele brief -->
-<section id="clientele" class="industry-section py-8 py-md-5 px-4 px-md-0">
+<section id="clientele" class="industry-section py-8 px-4 px-md-0">
   <!-- Page Title -->
   <!-- <h2 class="section-title text-center mb-5">Clientele Beneficiaries</h2> -->
 
@@ -138,7 +132,6 @@
             <a href="/clientele-beneficiaries/business" class="btn btn-secondary">Know More</a>
             <a href="" class="btn btn-secondary-outline">Video</a>
           </div>
-
         </div>
         <div class="col-md-6 order-first">
           <img src="/images/business-icon.png" alt="Business Icon" class="industry-icon neumorphism">
@@ -164,7 +157,7 @@
             resilience, constant challenging learning needs, endless passion to seek help, develop immunity in rejection
             environs, constantly networking for volunteers to support social cause etc, are configured as prime important in our learning solutions
           </p>
-          <div class="d-flex gap-3 align-items-center">
+          <div class="d-flex gap-3 align-items-center justify-content-around justify-content-md-start ">
             <a href="/clientele-beneficiaries/ngo" class="btn btn-secondary">Know more</a>
             <a href="" class="btn btn-secondary-outline">Video</a>
           </div>
@@ -191,7 +184,7 @@
             Beneficiaries are students, faculty & academic leaders in schools, polytechnics, colleges & universities.
           </p>
           <p>Thus, ESPeople develop the next generation of youth for tomorrow's nation.</p>
-          <div class="d-flex gap-3 align-items-center">
+          <div class="d-flex gap-3 align-items-center justify-content-around justify-content-md-start ">
             <a href="/clientele-beneficiaries/education" class="btn btn-secondary">Know more</a>
             <a href="" class="btn btn-secondary-outline">Video</a>
           </div>
@@ -217,7 +210,7 @@
           <p>Besides we can join hands with the governance team to successfully create awareness, alignment with various
             stack holders and public in connection with various programs & projects government sets as a priority goals
             for nations growth & development</p>
-          <div class="d-flex gap-3 align-items-center">
+          <div class="d-flex gap-3 align-items-center justify-content-around justify-content-md-start ">
             <a href="/clientele-beneficiaries/government-organizations" class="btn btn-secondary">Know more</a>
             <a href="" class="btn btn-secondary-outline">Video</a>
           </div>
@@ -274,7 +267,7 @@
 </section>
 
 <!-- esp core belief and learning model -->
-<section class="why-choose-us py-8 py-md-5">
+<section class="why-choose-us py-8">
   <div class="container text-center">
     <!-- Title -->
     <h2 class="section-title mb-5">What Sets Us Apart</h2>
