--- a/public/scss/main.css
+++ b/public/scss/main.css
@@ -26,6 +26,17 @@
   width: 4rem;
   /* aspect-ratio: 1; */ }
 
+hr.section-divider {
+  border: none;
+  background: black;
+  background: radial-gradient(circle, black 0%, white 100%);
+  height: 5px;
+  opacity: 0.5;
+  width: 25%;
+  box-shadow: 0px 2px 10px rgba(34, 34, 34, 0.3);
+  /* Subtle shadow for smooth look */
+  border-radius: 50%; }
+
 html {
   scroll-behavior: smooth; }
 
@@ -210,60 +221,55 @@ img {
   /* Preserve aspect ratio and cover the area */ }
 
 .beneficiaries {
-  padding: 50px 0;
-  background-color: #1e1e1e;
-  color: #fff; }
+  color: #2C2C2C; }
   .beneficiaries .text-box {
-    background-color: #F4F4F9; }
+    background-color: #2C2C2C; }
     .beneficiaries .text-box .title {
-      color: #2C2C2C; }
-
-@keyframes slideInFromRight {
-  0% {
-    left: -100%;
-    /* Start offscreen */
-    opacity: 0;
-    /* Invisible initially */ }
-  100% {
-    left: 50%;
-    /* Final position */
-    opacity: 1;
-    /* Fully visible */ } }
+      color: #F4F4F9; }
+  .beneficiaries .grid-container {
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    justify-items: center;
+    align-items: center;
+    padding: 20px; }
+  .beneficiaries .grid-item {
+    display: flex;
+    justify-content: center; }
+  .beneficiaries .item1 {
+    grid-column: 2 / 3; }
+  .beneficiaries .item2 {
+    grid-column: 1 / 2; }
+  .beneficiaries .item3 {
+    grid-column: 3 / 4; }
+  .beneficiaries .item4 {
+    grid-column: 2 / 3; }
   .beneficiaries .beneficiary-card {
     background: linear-gradient(145deg, #191919, #1e1e1e);
+    padding: 2rem;
     text-align: center;
     transition: all 0.3s ease;
-    position: relative;
-    /* For icon animation */
-    overflow: hidden;
-    /* Ensure nothing overflows */
-    height: 200px;
-    /* Hover effect for subtle change */
-    /* Icon styling and slide-in animation */ }
+    width: 180px;
+    height: 180px;
+    border-radius: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; }
     .beneficiaries .beneficiary-card:hover {
-      border-radius: 10px;
       background: linear-gradient(145deg, #191919, #1e1e1e);
-      box-shadow: 20px 20px 60px #181818, -20px -20px 60px #474747; }
+      box-shadow: 20px 20px 60px #2C2C2C, -20px -20px 60px #fff;
+      cursor: pointer; }
     .beneficiaries .beneficiary-card i {
       color: #007BFF;
-      font-size: 4rem;
-      position: absolute;
-      top: 50%;
-      left: -100%;
-      /* Initially positioned offscreen */
-      transform: translate(-50%, -50%);
-      opacity: 0;
-      /* Hidden initially */
-      animation: slideInFromRight 0.8s ease forwards;
-      /* Trigger animation */
-      animation-delay: 0.5s;
-      /* Delay to ensure smooth entry */ }
-  @media (max-width: 767px) {
-    .beneficiaries .title {
-      font-size: 1.5rem; } }
+      font-size: 3rem;
+      margin-bottom: 10px; }
+    .beneficiaries .beneficiary-card h4 {
+      color: #F4F4F9;
+      font-size: 1.1rem;
+      text-align: center; }
+
 .industry-section {
   position: relative;
-  padding: 4rem 0;
   /* Wave Shape */
   /* Blob Shape */ }
   .industry-section .industry-title {
@@ -284,9 +290,12 @@ img {
       color: #007BFF;
       margin-right: 0.5rem; }
   .industry-section .industry-icon {
-    width: 70%;
+    width: 80%;
     margin-inline: auto;
     display: block; }
+    @media (min-width: 991px) {
+      .industry-section .industry-icon {
+        width: 50%; } }
   .industry-section .wave-shape {
     position: absolute;
     bottom: 0;
