--- a/themes/growth-sketch/assets/scss/abstracts/_common.scss
+++ b/themes/growth-sketch/assets/scss/abstracts/_common.scss
@@ -6,3 +6,16 @@
   width: 4rem;
   /* aspect-ratio: 1; */
 }
+
+hr.section-divider {
+  // border-top: 5px solid $secondary-clr;
+  border: none;
+  background: rgb(0, 0, 0);
+  background: radial-gradient(circle, rgba(0, 0, 0, 1) 0%, rgba(255, 255, 255, 1) 100%);
+  height: 5px;
+  opacity: 0.5;
+  width: 25%;
+  box-shadow: 0px 2px 10px rgba(34, 34, 34, 0.3);
+  /* Subtle shadow for smooth look */
+  border-radius: 50%;
+}
