--- a/themes/growth-sketch/assets/scss/pages/_home.scss
+++ b/themes/growth-sketch/assets/scss/pages/_home.scss
@@ -4,105 +4,59 @@
 .hero {
   background-color: $white;
   min-height: 87vh;
-}
+  .carousel-inner {
+    border-radius: 10px;
+    height: 400px;
+    /* Set a fixed height */
+  
+    .carousel-image {
+      height: 400px;
+      /* Make sure the image fills the height */
+      object-fit: cover;
+      /* Preserve aspect ratio and cover the area */
+    }
 
-.carousel-indicators {
-  bottom: -20px;
-  /* Adjust position of the dots */
-}
-
-.carousel-inner {
-  border-radius: 10px;
-  height: 400px;
-  /* Set a fixed height */
-
-}
-
-.carousel-image {
-  min-height: 400px;
-  /* Make sure the image fills the height */
-  object-fit: cover;
-  /* Preserve aspect ratio and cover the area */
+  }
+  .carousel-indicators {
+    bottom: -20px;
+    /* Adjust position of the dots */
+  }
+  
 }
 
 .beneficiaries {
-  // padding: 50px 0;
-  // background-color: $light-clr;
   color: $secondary-clr;
-
-  .text-box {
-    background-color: $secondary-clr;
-
-    .title {
-      // font-size: 2rem;
-      // font-weight: 700;
-      color: $light-clr;
-    }
+  .sub-title{
+    font-weight: bold;
   }
-
-  .grid-container {
-    // display: grid;
-    grid-template-columns: repeat(3, 1fr); // Three columns grid
-    grid-template-rows: repeat(3, 1fr); // Three rows grid
-    // gap: 20px; // Gap between grid items
-    justify-items: center; // Center items horizontally
-    align-items: center;   // Center items vertically
-    padding: 20px;
-  }
-  
-  .grid-item {
-    display: flex;
-    justify-content: center;
-  }
-  
-  .item1 {
-    grid-column: 2 / 3; // Center the first item
-  }
-  
-  .item2 {
-    grid-column: 1 / 2; // Align 2nd item to the left in 2nd row
-  }
-  
-  .item3 {
-    grid-column: 3 / 4; // Align 3rd item to the right in 2nd row
-  }
-  
-  .item4 {
-    grid-column: 2 / 3; // Center the last item
-  }
-  
   .beneficiary-card {
-    background: linear-gradient(145deg, #191919, #1e1e1e);
-    padding: 2rem;
+    background: $secondary-clr;
+    padding: min(0.3rem, 1rem);
     text-align: center;
     transition: all 0.3s ease;
-    width: 180px;
-    height: 180px;
+    width: 150px;
+    height: 150px;
     border-radius: 50%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-  
-    // Hover effect
-    &:hover {
-      background: linear-gradient(145deg, #191919, #1e1e1e);
-    box-shadow: 20px 20px 60px $secondary-clr, -20px -20px 60px $white;
-    cursor: pointer;
+    margin-inline:auto;
+    @media(max-width:425px){
+      width:  30vw;
+      height: 30vw;
 
-      // box-shadow: 20px 20px 60px #181818, -20px -20px 60px #474747;
     }
   
     // Icon styling
     i {
-      color: $primary-clr;
-      font-size: 3rem;
-      margin-bottom: 10px;
+      color: $accent-clr;
+      font-size: clamp(1rem, 4vw, 48px);
     }
   
-    h4 {
+    p {
       color: $light-clr;
-      font-size: 1.1rem;
+      font-size: clamp(0.6rem, 4vw, 0.9rem);
       text-align: center;
     }
   }
@@ -155,32 +109,11 @@
     }
   }
 
-  /* Wave Shape */
-  .wave-shape {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 50px;
-    background: url(/img/wave.svg) no-repeat;
-    background-size: cover;
-  }
-
-  /* Blob Shape */
-  .blob-shape {
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    width: 250px;
-    height: 250px;
-    background: url('img/blob-shape.svg') no-repeat;
-    background-size: contain;
-  }
 }
 
 .evolution-vision-mission {
   position: relative;
-  background-color: #f0f0f0; // Your base section background color
+  background-color: $secondary-clr; // Your base section background color
   padding: 9rem 0; // Padding for the section content
   border-radius: 10px;
   // margin-inline: 5rem;
@@ -203,16 +136,16 @@
     position: relative;
     z-index: 2;
   }
-  h2 {
-    font-size: 2.5rem;
-    font-weight: 700;
-    margin-bottom: 20px;
-    padding-bottom: 5px;
+  h1 {
+    // font-size: 2.5rem;
+    // font-weight: 700;
+    // margin-bottom: 20px;
+    padding-bottom: 0.8rem;
     position: relative;
     &::after{
       position: absolute;
       content: "";
-      border-bottom: 3px solid black;
+      border-bottom: 3px solid $white;
       width: 50%;
       bottom: 0;
       left: 0;
@@ -226,16 +159,16 @@
     }
   }
   p {
-    font-size: 1.1rem;
-    font-weight: 500;
+    // font-size: 1.1rem;
+    // font-weight: 500;
     font-style: italic;
-    margin-bottom: 10px;
+    // margin-bottom: 10px;
   }
 
   ul {
     list-style: none;
-    font-size: 1rem;
-    font-weight: 500;
+    // font-size: 1rem;
+    // font-weight: 500;
 
     li {
       margin-bottom: 10px;
@@ -247,21 +180,11 @@
       }
     }
   }
-  // .evolution-section {
-   
-
-
-  // }
-
-  // .vision-mission-section {
-
-   
-  // }
 
   .vertical-divider {
     width: 2px;
     height: 100%;
-    background-color: rgba(16, 16, 16, 0.918);
+    background-color: $white;
     margin: auto;
   }
 }
@@ -278,7 +201,7 @@
 
   .neumorphic-card {
     padding: 1rem;
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    transition: all 300ms ease;
     height: 100%;
     // background: linear-gradient(145deg, #ffffff, #e6e6e6);
     border-radius: 10px;
@@ -300,7 +223,7 @@
     p,
     ul {
       font-size: 1rem;
-      color: #333;
+      // color: #333;
       text-align: left;
     }
 
@@ -315,6 +238,8 @@
 
     &:hover {
       transform: scale(1.05);
+      background-color: $secondary-clr;
+      color: $light-clr;
       box-shadow: 25px 25px 75px rgba(0, 0, 0, 0.15), -25px -25px 75px rgba(255, 255, 255, 0.5);
     }
   }
