--- a/themes/growth-sketch/layouts/_default/home.html
+++ b/themes/growth-sketch/layouts/_default/home.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 <!-- Section 1- Hero -->
-<section class="hero d-flex align-items-center py-8 px-4 px-md-0">
+<section class="hero d-flex align-items-center py-8 px-4 px-md-0 bg-primary text-light">
   <div class="container text-center text-md-start">
     <div class="row align-items-center justify-content-between">
       <div class="col-md-5 mt-5 mt-md-0">
@@ -9,8 +9,8 @@
         <p class="mt-3">At ESPeople, we energize and synergize people. We integrate your teams' full collective
           potentials and optimize your management & leadership towards mission accomplishments</p>
         <em>Thus we are ESPeople Trainingsmiths</em>
-        <div class="btn-row mt-4">
-          <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#ourApproach">Know
+        <div class="btn-row mt-4 d-none">
+          <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#ourApproach">Know
             us</button>
           <!-- <button class="btn btn-secondary-outline ms-md-3">Main features</button> -->
         </div>
@@ -19,26 +19,26 @@
         <div id="heroCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="1500">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="/images/hero-img-1.jpg" class="d-block w-100 carousel-image neumorphism " alt="First Image">
-              <div class="carousel-caption d-none d-md-block bg-dark py-1 rounded-2 opacity-50">
+              <img src="/images/hero-img-3-B.jpg" class="d-block w-100 carousel-image neumorphism " alt="First Image">
+              <div class="carousel-caption d-md-block bg-dark py-1 rounded-2 opacity-50">
                 <h5>ESP Business</h5>
               </div>
             </div>
             <div class="carousel-item">
               <img src="/images/hero-img-2.jpg" class="d-block w-100 carousel-image neumorphism " alt="Second Image">
-              <div class="carousel-caption d-none d-md-block bg-dark py-1 rounded-2 opacity-50">
+              <div class="carousel-caption d-md-block bg-dark py-1 rounded-2 opacity-50">
                 <h5>ESP Non-Profit</h5>
               </div>
             </div>
             <div class="carousel-item">
               <img src="/images/hero-img-3.jpg" class="d-block w-100 carousel-image neumorphism " alt="Third Image">
-              <div class="carousel-caption d-none d-md-block bg-dark py-1 rounded-2 opacity-50">
+              <div class="carousel-caption d-md-block bg-dark py-1 rounded-2 opacity-50">
                 <h5>ESP Education</h5>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="/images/hero-img-4.jpg" class="d-block w-100 carousel-image neumorphism " alt="Fourth Image">
-              <div class="carousel-caption d-none d-md-block bg-dark py-1 rounded-2 opacity-50">
+              <img src="/images/rashtrapathi-bhavan.jpg" class="d-block w-100 carousel-image neumorphism " alt="Fourth Image">
+              <div class="carousel-caption d-md-block bg-dark py-1 rounded-2 opacity-50">
                 <h5>ESP Government</h5>
               </div>
             </div>
@@ -55,49 +55,44 @@
   </div>
 </section>
 
-<hr class="text-center section-divider mx-auto">
+<!-- <hr class="text-center section-divider mx-auto"> -->
 
 <!-- section 2 - for whom we deliver -->
-<section class="beneficiaries py-8 px-4 px-md-0">
+<section class="beneficiaries py-4 px-4 px-md-0">
   <div class="container">
-    <div class="row align-items-center justify-content-between">
+    <div class="row align-items-center justify-content-around">
       <!-- Left Section (Text) -->
 
       <div class="col-md-4">
-        <div class="d-flex gap-3 align-items-center mb-3 justify-content-center justify-content-md-start">
-          <img class="icon rounded-2" src="/images/clientele.jpeg" alt="clientele img">
-          <h4>Our Beneficiaries</h4>
-        </div>
-        <div class="text-box p-4  rounded-3 mt-4 ">
-          <h3 class="title">Whom we empower with our ESP learning solutions?</h3>
-        </div>
+        <h1 class="text-primary display-5 mb-3">Our Beneficiaries</h1>
+        <h4 class="sub-title">Whom we empower with our ESP learning solutions?</h4>
       </div>
 
       <!-- Right Section (Cards) -->
       <div class="col-md-6 mt-4 mt-md-0">
-        <div class="grid-container d-md-grid row gap-4 gap-md-2">
-          <div class="grid-item item1">
+        <div class="row gap-2 justify-content-between">
+          <div class="col-12 p-0 justify-items-center">
             <div class="beneficiary-card py-4">
               <i class="fa-solid fa-business-time"></i>
-              <h4 class="mt-2">ESP Business</h4>
+              <p class="mb-0">ESP Business</p>
             </div>
           </div>
-          <div class="grid-item item2">
+          <div class="col-5 p-0">
             <div class="beneficiary-card py-4">
               <i class="fa-solid fa-building-ngo"></i>
-              <h4 class="mt-2">ESP Non-Profit</h4>
+              <p class="mb-0">ESP Non-Profit</p>
             </div>
           </div>
-          <div class="grid-item item3">
+          <div class="col-5 p-0">
             <div class="beneficiary-card py-4">
               <i class="fa-solid fa-user-graduate"></i>
-              <h4 class="mt-2">ESP Education</h4>
+              <p class="mb-0">ESP Education</p>
             </div>
           </div>
-          <div class="grid-item item4">
+          <div class="col-12 p-0 justify-items-center">
             <div class="beneficiary-card py-4">
               <i class="fa-solid fa-landmark"></i>
-              <h4 class="mt-2">ESP Government</h4>
+              <p class="mb-0">ESP Government</p>
             </div>
           </div>
         </div>
@@ -122,19 +117,19 @@
           <h3 class="industry-title mt-3 mt-md-0">ESP Business</h3>
           <hr>
           <h4>Learning Solutions</h4>
-          <p><em>We deliver transformative, contemporary People Developmental Learning for desired results. </em>
+          <p><em>We deliver transformative, contemporary People Developmental Learning for desired results of your business.</em>
             <br><br>
             Which will enhance executive & managerial productivity with leadership optimization for your organization.
             <br><br>
-            Thus facilitating desired organizational ranking within your industry through your people.
+            Thus ESPeople facilitates for desired organizational ranking within your industry through your people.
           </p>
           <div class="d-flex gap-3 align-items-center">
-            <a href="/clientele-beneficiaries/business" class="btn btn-secondary">Know More</a>
-            <a href="" class="btn btn-secondary-outline">Video</a>
+            <a href="/clientele-beneficiaries/business" class="btn btn-primary">Know More</a>
+            <a href="" class="btn btn-primary-outline">Video</a>
           </div>
         </div>
         <div class="col-md-6 order-first">
-          <img src="/images/business-icon.png" alt="Business Icon" class="industry-icon neumorphism">
+          <img src="/images/ESP-Business-1.jpeg" alt="Business Icon" class="industry-icon neumorphism">
         </div>
       </div>
     </div>
@@ -146,7 +141,7 @@
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md-6 order-first">
-          <img src="/images/nonprofit-icon.png" alt="Non-Profit Icon" class="industry-icon neumorphism">
+          <img src="/images/non-profit.png" alt="Non-Profit Icon" class="industry-icon neumorphism">
         </div>
         <div class="col-md-6">
           <h3 class="industry-title mt-3 mt-md-0">ESP Non-Profit</h3>
@@ -157,15 +152,15 @@
             resilience, constant challenging learning needs, endless passion to seek help, develop immunity in rejection
             environs, constantly networking for volunteers to support social cause etc, are configured as prime important in our learning solutions
           </p>
+          <em></em>
           <div class="d-flex gap-3 align-items-center justify-content-around justify-content-md-start ">
-            <a href="/clientele-beneficiaries/ngo" class="btn btn-secondary">Know more</a>
-            <a href="" class="btn btn-secondary-outline">Video</a>
+            <a href="/clientele-beneficiaries/ngo" class="btn btn-primary">Know more</a>
+            <a href="" class="btn btn-primary-outline">Video</a>
           </div>
         </div>
       </div>
     </div>
-    <!-- Blob Shape -->
-    <div class="blob-shape"></div>
+
   </div>
 
   <!-- Education Sector -->
@@ -185,34 +180,35 @@
           </p>
           <p>Thus, ESPeople develop the next generation of youth for tomorrow's nation.</p>
           <div class="d-flex gap-3 align-items-center justify-content-around justify-content-md-start ">
-            <a href="/clientele-beneficiaries/education" class="btn btn-secondary">Know more</a>
-            <a href="" class="btn btn-secondary-outline">Video</a>
+            <a href="/clientele-beneficiaries/education" class="btn btn-primary">Know more</a>
+            <a href="" class="btn btn-primary-outline">Video</a>
           </div>
         </div>
       </div>
     </div>
-    <!-- Blob Shape -->
-    <div class="blob-shape"></div>
+
   </div>
   <!-- Government Organizations -->
   <div class="government-section py-5">
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md-6 order-first">
-          <img src="/images/government-icon.png" alt="Government Icon" class="industry-icon neumorphism">
+          <img src="/images/Indian-Parliment-1.webp" alt="Government Icon" class="industry-icon neumorphism">
         </div>
         <div class="col-md-6 order-md-2">
           <h3 class="industry-title mt-3 mt-md-0">ESP Government</h3>
           <hr>
           <h4>Learning Solutions</h4>
-          <!-- <p>We align & train government teams to work towards efficient, transparent, good governance for impactful
-            public service in the process of nation building</p> -->
-          <p>Besides we can join hands with the governance team to successfully create awareness, alignment with various
+          <p><em>
+            We align & train government teams to work towards efficient, transparent, good governance for impactful
+              public service in the process of nation building
+          </em></p>
+          <p>We can also join hands with the governance team to successfully create awareness, alignment with various
             stack holders and public in connection with various programs & projects government sets as a priority goals
             for nations growth & development</p>
           <div class="d-flex gap-3 align-items-center justify-content-around justify-content-md-start ">
-            <a href="/clientele-beneficiaries/government-organizations" class="btn btn-secondary">Know more</a>
-            <a href="" class="btn btn-secondary-outline">Video</a>
+            <a href="/clientele-beneficiaries/government-organizations" class="btn btn-primary">Know more</a>
+            <a href="" class="btn btn-primary-outline">Video</a>
           </div>
         </div>
       </div>
@@ -222,13 +218,13 @@
 </section>
 
 <!-- sec 4 - evolution -->
-<section class="evolution-vision-mission px-4 px-md-0">
+<section class="evolution-vision-mission px-4 px-md-0 text-light">
   <div class="container">
     <div class="row">
       <!-- Evolution Section -->
-      <div class="col-md-5 me-auto evolution-section" data-aos="fade-right">
-        <h2 class="evolution-title">The Evolution of ESPeople</h2>
-        <p>
+      <div class="evolution-section col-md-5 me-auto" data-aos="fade-right">
+        <h1 class="display-5 mb-3">The Evolution of ESPeople</h1>
+        <p class="evolution">
           Every great organisation starts with a dream—a vision for achieving excellence.
           But to turn that vision into reality, you need the right people who have the energy
           and ability to make things happen. That's where ESPeople come in. We partner with
@@ -237,18 +233,14 @@
         </p>
         <!-- <a href="#about-us" class="btn btn-dark mt-4">About us</a> -->
       </div>
-    <!-- </div> -->
     <!-- Divider -->
-    <!-- <div class="row "> -->
     <div class="col-md-2 mx-auto d-none d-md-block">
           <div class="vertical-divider"></div>
         </div>
-    <!-- </div> -->
 
-    <!-- <div class="row mt-4 mt-md-0"> -->
       <!-- Vision & Mission Section -->
       <div class="col-md-5 ms-auto vision-mission-section" data-aos="fade-left">
-        <h2 class="evolution-title">ESP Vision & Mission</h2>
+        <h1 class="display-5">ESP Vision & Mission</h1>
         <p class="vision">
           <strong>Energize & Synergize People</strong> capabilities through effective learning interventions
         </p>
@@ -270,7 +262,7 @@
 <section class="why-choose-us py-8">
   <div class="container text-center">
     <!-- Title -->
-    <h2 class="section-title mb-5">What Sets Us Apart</h2>
+    <h2 class="section-title mb-5">Why ESPeople</h2>
 
     <div class="row justify-content-center">
       <!-- Card 1: Our core belief -->
