--- a/public/scss/main.css
+++ b/public/scss/main.css
@@ -52,10 +52,12 @@ hr.section-divider {
 /* SCSS HSL */
 html {
   scroll-behavior: smooth; }
-
+  @media (max-width: 425px) {
+    html {
+      font-size: 14px; } }
 body {
   overflow-x: hidden;
-  padding-top: 13vh; }
+  padding-top: 10vh; }
 
 h1 {
   line-height: 1.3 !important; }
@@ -80,22 +82,26 @@ img {
   color: #ff9900; }
 
 /* SCSS HSL */
-.navbar-brand img {
-  min-width: 60px;
-  width: 70px;
-  max-width: 80%;
-  flex-basis: 50%; }
-
 .navbar {
-  height: 13vh; }
-
-.nav-item .nav-link, .nav-item .dropdown-item {
-  color: #004080; }
-
-@media (max-width: 991px) {
-  .nav-item {
-    text-align: right; } }
-
+  height: 10vh; }
+  .navbar .navbar-brand img {
+    width: clamp(50px, 60px, 12vw); }
+  .navbar .navbar-brand .brand-name {
+    font-size: 0.8rem; }
+  .navbar .navbar-toggler {
+    border: none; }
+  @media (max-width: 768px) {
+    .navbar .navbar-collapse {
+      position: absolute;
+      top: 10vh;
+      left: 0;
+      right: 0; } }
+  .navbar .nav-item .nav-link,
+  .navbar .nav-item .dropdown-item {
+    color: #004080; }
+  @media (max-width: 991px) {
+    .navbar .nav-item {
+      text-align: right; } }
 /* SCSS HSL */
 .footer {
   background-color: #0a1b24;
@@ -230,16 +236,27 @@ img {
 /* SCSS HSL */
 .hero {
   background-color: #fff;
-  min-height: 87vh; }
+  min-height: calc(100vh - 10vh); }
+  @media (max-width: 768px) {
+    .hero h1 {
+      font-size: 1.5rem;
+      font-weight: 400; } }
   .hero .carousel-inner {
-    border-radius: 10px;
-    height: 400px;
-    /* Set a fixed height */ }
+    /* Set a fixed height */
+    height: calc(calc(100vh - 10vh)/2); }
+    @media (min-width: 768px) {
+      .hero .carousel-inner {
+        height: 400px;
+        border-radius: 10px; } }
     .hero .carousel-inner .carousel-image {
-      height: 400px;
       /* Make sure the image fills the height */
+      height: calc(calc(100vh - 10vh)/2);
       object-fit: cover;
       /* Preserve aspect ratio and cover the area */ }
+      @media (max-width: 768px) {
+        .hero .carousel-inner .carousel-image.neumorphism {
+          height: 400px;
+          border-radius: 0; } }
   .hero .carousel-indicators {
     bottom: -20px;
     /* Adjust position of the dots */ }
@@ -276,22 +293,7 @@ img {
 .industry-section {
   position: relative; }
   .industry-section .industry-title {
-    font-size: 2rem;
     font-weight: bold; }
-  .industry-section .industry-programs {
-    list-style: none;
-    padding: 0; }
-    .industry-section .industry-programs li {
-      font-size: 1.1rem;
-      margin-bottom: 0.75rem; }
-      .industry-section .industry-programs li i {
-        color: #004080;
-        margin-right: 0.5rem; }
-  .industry-section .stats {
-    font-size: 1.1rem; }
-    .industry-section .stats i {
-      color: #004080;
-      margin-right: 0.5rem; }
   .industry-section .industry-icon {
     width: 80%;
     margin-inline: auto;
@@ -347,6 +349,51 @@ img {
     height: 100%;
     background-color: #fff;
     margin: auto; }
+
+.learning-model-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  padding: 2rem; }
+
+.stage {
+  text-align: center;
+  opacity: 0.5;
+  transition: all 0.5s ease;
+  cursor: pointer; }
+
+.stage img {
+  height: 70%;
+  transition: transform 0.5s ease; }
+
+.stage p {
+  font-weight: bold;
+  color: #003f7d;
+  /* Main blue color */
+  margin-top: 0.5rem; }
+
+.awareness img {
+  filter: grayscale(1); }
+
+.understanding img {
+  filter: grayscale(1); }
+
+.learning img {
+  filter: grayscale(1); }
+
+.realization img {
+  filter: grayscale(1); }
+
+.habitualization img {
+  filter: grayscale(1); }
+
+.stage.active img {
+  filter: none;
+  transform: scale(1.2); }
+
+.stage.active {
+  opacity: 1; }
 
 .why-choose-us {
   background-color: #fff; }
