--- a/themes/growth-sketch/assets/scss/pages/_home.scss
+++ b/themes/growth-sketch/assets/scss/pages/_home.scss
@@ -1,19 +1,34 @@
 @import '../abstracts/variables';
-
 // hero
 .hero {
   background-color: $white;
-  min-height: 87vh;
+  $hero-height: calc(100vh - #{$navbar-height});
+  min-height: $hero-height;
+  h1{
+    @media(max-width:768px){
+      font-size: 1.5rem;
+      font-weight: 400;
+    }
+  }
   .carousel-inner {
-    border-radius: 10px;
-    height: 400px;
     /* Set a fixed height */
-  
-    .carousel-image {
+    height: calc(#{$hero-height}/2);
+    @media(min-width:768px){
       height: 400px;
+      border-radius: 10px;
+
+    }
+    .carousel-image {
       /* Make sure the image fills the height */
+      height: calc(#{$hero-height}/2);
       object-fit: cover;
       /* Preserve aspect ratio and cover the area */
+      &.neumorphism{
+        @media(max-width:768px){
+          height: 400px;
+          border-radius: 0;
+        }
+      }
     }
 
   }
@@ -69,42 +84,16 @@
   // padding: 4rem 0;
 
   .industry-title {
-    font-size: 2rem;
+    // font-size: 2rem;
     font-weight: bold;
-  }
-
-  .industry-programs {
-    list-style: none;
-    padding: 0;
-
-    li {
-      font-size: 1.1rem;
-      margin-bottom: 0.75rem;
-
-      i {
-        color: $primary-clr;
-        margin-right: 0.5rem;
-      }
-    }
-  }
-
-  .stats {
-    font-size: 1.1rem;
-
-    i {
-      color: $primary-clr;
-      margin-right: 0.5rem;
-    }
   }
 
   .industry-icon {
     width: 80%;
     margin-inline: auto;
     display: block;
-    // max-width: 250px;
     // margin-bottom: 2rem;
     @media(min-width:991px){
-      
       width: 50%;
     }
   }
@@ -188,6 +177,51 @@
     margin: auto;
   }
 }
+
+// learning model animation section
+.learning-model-container {
+  display: flex;
+  flex-direction: column;
+  
+  justify-content: space-around;
+  align-items: center;
+  padding: 2rem;
+}
+
+.stage {
+  text-align: center;
+  opacity: 0.5;
+  transition: all 0.5s ease;
+  cursor: pointer;
+}
+
+.stage img {
+  // width: 80px;
+  height: 70%;
+  transition: transform 0.5s ease;
+}
+
+.stage p {
+  font-weight: bold;
+  color: #003f7d; /* Main blue color */
+  margin-top: 0.5rem;
+}
+
+.awareness img { filter: grayscale(1); }
+.understanding img { filter: grayscale(1); }
+.learning img { filter: grayscale(1); }
+.realization img { filter: grayscale(1); }
+.habitualization img { filter: grayscale(1); }
+
+.stage.active img {
+  filter: none;
+  transform: scale(1.2);
+}
+
+.stage.active {
+  opacity: 1;
+}
+
 
 // why choose us
 
