--- a/themes/growth-sketch/layouts/partials/menu.html
+++ b/themes/growth-sketch/layouts/partials/menu.html
@@ -10,12 +10,12 @@ Renders a menu for the given menu ID.
 {{- $page := .page }}
 {{- $menuID := .menuID }}
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top p-0">
+<nav class="navbar navbar-expand-md navbar-light bg-light fixed-top p-0">
   <div class="container">
     <a class="navbar-brand d-flex align-items-center gap-2 gap-md-3 p-0" href="/">
       <img src="/images/logo.png" alt="ESPeople logo" title="ESPeople logo">
-      <div>
-        <p class="font-weight-bold h4 mb-0">ESPeople</p>
+      <div class="brand-name">
+        <p class="font-weight-bold mb-0">ESPeople</p>
         <em>TrainingSmiths</em>
       </div>
     </a>
